--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GAELIA - Votre compagnon de bien-être holistique</title>
-  <link rel="canonical" href="https://gaelia-app.web.app/">
+  <link rel="canonical" href="https://gaeliaserenity.web.app/">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
   <!-- Stripe -->
@@ -2373,4 +2373,5 @@
   </script>
 
 </body>
+
 </html>
