--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GAELIA SERENITY - Votre compagnon de bien-être holistique</title>
   <meta name="google-site-verification" content="AafQRLYkSruge6D3kFw9WZQvbX38PH4e7JTR42c5724" />
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <link rel="canonical" href="https://gaeliaserenity.web.app/">
   <script 
   src="https://www.paypal.com/sdk/js?client-id=BAAof8wHlbU5qbvdYFBWJAPUH2m--NNJnyPUkXX5gA95g8GR06if_a4uZfoUnasteyxUWoC22RSkvozxNQ&components=hosted-buttons&disable-funding=venmo&currency=USD">
@@ -1436,7 +1437,7 @@
     
     function initGoogleSignIn() {
       google.accounts.id.initialize({
-        client_id: "1054771063820-qfgcj2q15ku9tqmco1cb15suof3irnpj.apps.googleusercontent.com",
+        client_id: "725049168978-40j7dl4mgtpm9ondihha1d8maqjao0hu.apps.googleusercontent.com",
         callback: handleGoogleCredential,
         auto_select: false,
         cancel_on_tap_outside: true
